--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -289,20 +289,20 @@ main section#final article p {padding: 0 2px 0 7vh; position: relative; top: 189
     color: transparent;
     }
     
-    main section#ubicacion {width: 100%; height: 115vh; position: relative;}
-    main section#ubicacion article {width: 100%; height: 240px; position: relative; margin: 0; float: left; display: block; text-decoration: none; transition: all 0.3s ease-out
+    main section#ubicacion {width: 100%; height: 120vh; position: relative;}
+    main section#ubicacion article {width: 100%; height: 100%; position: relative; margin: 0; float: left; display: block; text-decoration: none; transition: all 0.3s ease-out
     }
-    main section#ubicacion article nav { width: 100%; height: 680px; position: relative; margin: 0 auto; float: none;
+    main section#ubicacion article nav { width: 100%; height: 100%; position: relative; margin: 0 auto; float: none;
     }
     main section#ubicacion article nav a img {position: absolute; transform: scale(0.7); top: -12px; left: -21px; border-radius: 21px;
     }
-    main section#ubicacion article nav a#proy-01 {width: 353px; height: 214px; position: relative; margin: 0px 0 40px 30px; float: left; display: block; text-decoration: none; transition: all 0.6s ease-out; border: solid .5px rgba(150, 150, 150, 0.95); border-radius: 15px;
+    main section#ubicacion article nav a#proy-01 {width: 353px; height: 214px; position: relative; margin: 0px 0 10% 8%; float: left; display: block; text-decoration: none; transition: all 0.6s ease-out; border: solid .5px rgba(150, 150, 150, 0.95); border-radius: 15px;
     }
-    main section#ubicacion article nav a#proy-02 {width: 353px; height: 214px; position: relative; margin: 0px 0 40px 30px; float: left; display: block; text-decoration: none; transition: all 0.6s ease-out; border: solid .5px rgba(150, 150, 150, 0.95); border-radius: 15px;
+    main section#ubicacion article nav a#proy-02 {width: 353px; height: 214px; position: relative; margin: 0px 0 10% 8%; float: left; display: block; text-decoration: none; transition: all 0.6s ease-out; border: solid .5px rgba(150, 150, 150, 0.95); border-radius: 15px;
     }
-    main section#ubicacion article nav a#proy-03 {width: 353px; height: 214px; position: relative; margin: 0px 0 40px 30px; float: left; display: block; text-decoration: none; transition: all 0.6s ease-out; border: solid .5px rgba(150, 150, 150, 0.95); border-radius: 15px;
+    main section#ubicacion article nav a#proy-03 {width: 353px; height: 214px; position: relative; margin: 0px 0 10% 8%; float: left; display: block; text-decoration: none; transition: all 0.6s ease-out; border: solid .5px rgba(150, 150, 150, 0.95); border-radius: 15px;
     }
-    main section#ubicacion article nav a#proy-04 {width: 353px; height: 214px; position: relative; margin: 0px 0 40px 30px; float: left; display: block; text-decoration: none; transition: all 0.6s ease-out; border: solid .5px rgba(150, 150, 150, 0.95); border-radius: 15px;
+    main section#ubicacion article nav a#proy-04 {width: 353px; height: 214px; position: relative; margin: 0px 0 10% 9%; float: left; display: block; text-decoration: none; transition: all 0.6s ease-out; border: solid .5px rgba(150, 150, 150, 0.95); border-radius: 15px;
     }
     main section#ubicacion article nav a#proy-05 {display: none;
     }
